2023-01-04  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-1stclassvideolsubs): new function.
	(ee-1stclassvideos-dlsubs): use `find-1stclassvideolsubs'.

2023-01-01  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): added an indication
	that the video "2022yttranscript" (now) has subtitles.
	(ee-1stclassvideos-info): added an indication that the video
	"2021workshop3" (now) has subtitles.

2022-12-31  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): added an indication
	that the video "2021workshop6" (now) has subtitles.
	(ee-1stclassvideos-info): added an indication that the video
	"2022eevmake0" (now) has subtitles.

2022-12-30  Eduardo Ochs  <eduardoochs@gmail.com>

	* eepitch.el (ee-wait-status): new variable.
	(ee-wait-repl-started, ee-wait, find-slyprocess-reuse)
	(find-slyprocess-create00, find-slyprocess-create0)
	(find-slyprocess-create, find-slyprocess, eepitch-sly): new
	functions. Some of the `find-sly*' functions are complete rewrites
	of older experimental functions with the same names.

2022-12-29  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): added an indication
	that the video "eev2021b" (now) has subtitles.
	(ee-1stclassvideos-info): added an indication that the video
	"2021workshop1" (now) has subtitles.
	(ee-1stclassvideos-info): added an indication that the video
	"2021workshop2" (now) has subtitles.
	(ee-1stclassvideos-info): added an indication that the video
	"2021workshop4" (now) has subtitles.

2022-12-28  Eduardo Ochs  <eduardoochs@gmail.com>

	* eepitch.el (find-slyprocess-reuse, find-slyprocess-create): new
	functions.
	(find-slyprocess): use `find-slyprocess-reuse' and
	`find-slyprocess-create'.

2022-12-27  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): added an indication
	that the video "eevtempl" (now) has subtitles.

2022-12-25  Eduardo Ochs  <eduardoochs@gmail.com>